force-app/main/default/objects/Timesheet__c/fields/FridayAM__c.field-meta.xml
<CustomField>
    <fullName>FridayAM__c</fullName>
    <label>Friday AM</label>
    <summarizedField>TimesheetEntry__c.FridayAM__c</summarizedField>
    <summaryForeignKey>TimesheetEntry__c.Timesheet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>