force-app/main/default/objects/Timesheet__c/fields/FridayPM__c.field-meta.xml
<CustomField>
    <fullName>FridayPM__c</fullName>
    <label>Friday PM</label>
    <summarizedField>TimesheetEntry__c.FridayPM__c</summarizedField>
    <summaryForeignKey>TimesheetEntry__c.Timesheet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>