force-app/main/default/objects/Timesheet__c/fields/MondayAM__c.field-meta.xml
<CustomField>
    <fullName>MondayAM__c</fullName>
    <label>Monday AM</label>
    <summarizedField>TimesheetEntry__c.MondayAM__c</summarizedField>
    <summaryForeignKey>TimesheetEntry__c.Timesheet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>