force-app/main/default/objects/Timesheet__c/fields/MondayDate__c.field-meta.xml
<CustomField>
    <fullName>MondayDate__c</fullName>
    <label>Monday Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>