force-app/main/default/objects/Timesheet__c/fields/MondayPM__c.field-meta.xml
<CustomField>
    <fullName>MondayPM__c</fullName>
    <label>Monday PM</label>
    <summarizedField>TimesheetEntry__c.MondayPM__c</summarizedField>
    <summaryForeignKey>TimesheetEntry__c.Timesheet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>