force-app/main/default/objects/Timesheet__c/fields/NumberTSE__c.field-meta.xml
<CustomField>
    <fullName>NumberTSE__c</fullName>
    <label>Number of TSE</label>
    <summaryForeignKey>TimesheetEntry__c.Timesheet__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>