force-app/main/default/objects/Timesheet__c/fields/NumberTSEApproved__c.field-meta.xml
<CustomField>
    <fullName>NumberTSEApproved__c</fullName>
    <label>Number of TSE Approved</label>
    <summaryFilterItems>
        <field>TimesheetEntry__c.Status__c</field>
        <operation>equals</operation>
        <value>Accepted</value>
    </summaryFilterItems>
    <summaryForeignKey>TimesheetEntry__c.Timesheet__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>