force-app/main/default/objects/Timesheet__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <color>#DDDDDD</color>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Submitted For Approval</fullName>
                <color>#FFFF66</color>
                <label>Submitted For Approval</label>
            </value>
            <value>
                <fullName>Must be updated</fullName>
                <color>#FF9900</color>
                <label>Must be updated</label>
            </value>
            <value>
                <fullName>Accepted</fullName>
                <color>#33FF33</color>
                <label>Accepted</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <color>#FF0000</color>
                <label>Rejected</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>