force-app/main/default/objects/Timesheet__c/fields/TECH_RunApproval__c.field-meta.xml
<CustomField>
    <fullName>TECH_RunApproval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RunApproval</label>
    <type>Checkbox</type>
</CustomField>