force-app/main/default/objects/Timesheet__c/fields/ThursdayAM__c.field-meta.xml
<CustomField>
    <fullName>ThursdayAM__c</fullName>
    <label>Thursday AM</label>
    <summarizedField>TimesheetEntry__c.ThursdayAM__c</summarizedField>
    <summaryForeignKey>TimesheetEntry__c.Timesheet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>