force-app/main/default/objects/Timesheet__c/fields/ThursdayDate__c.field-meta.xml
<CustomField>
    <fullName>ThursdayDate__c</fullName>
    <formula>MondayDate__c + 3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Thursday Date</label>
    <type>Date</type>
</CustomField>