force-app/main/default/objects/Timesheet__c/fields/ThursdayPM__c.field-meta.xml
<CustomField>
    <fullName>ThursdayPM__c</fullName>
    <label>Thursday PM</label>
    <summarizedField>TimesheetEntry__c.ThursdayPM__c</summarizedField>
    <summaryForeignKey>TimesheetEntry__c.Timesheet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>