force-app/main/default/objects/Timesheet__c/fields/TuesdayAM__c.field-meta.xml
<CustomField>
    <fullName>TuesdayAM__c</fullName>
    <label>Tuesday AM</label>
    <summarizedField>TimesheetEntry__c.TuesdayAM__c</summarizedField>
    <summaryForeignKey>TimesheetEntry__c.Timesheet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>