force-app/main/default/objects/Timesheet__c/fields/TuesdayDate__c.field-meta.xml
<CustomField>
    <fullName>TuesdayDate__c</fullName>
    <formula>MondayDate__c ++1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tuesday Date</label>
    <type>Date</type>
</CustomField>