force-app/main/default/objects/Timesheet__c/fields/TuesdayPM__c.field-meta.xml
<CustomField>
    <fullName>TuesdayPM__c</fullName>
    <label>Tuesday PM</label>
    <summarizedField>TimesheetEntry__c.TuesdayPM__c</summarizedField>
    <summaryForeignKey>TimesheetEntry__c.Timesheet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>