force-app/main/default/objects/Timesheet__c/fields/WednesdayAM__c.field-meta.xml
<CustomField>
    <fullName>WednesdayAM__c</fullName>
    <label>Wednesday AM</label>
    <summarizedField>TimesheetEntry__c.WednesdayAM__c</summarizedField>
    <summaryForeignKey>TimesheetEntry__c.Timesheet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>