force-app/main/default/objects/Timesheet__c/fields/WednesdayDate__c.field-meta.xml
<CustomField>
    <fullName>WednesdayDate__c</fullName>
    <formula>MondayDate__c +2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wednesday Date</label>
    <type>Date</type>
</CustomField>