force-app/main/default/objects/Timesheet__c/fields/WednesdayPM__c.field-meta.xml
<CustomField>
    <fullName>WednesdayPM__c</fullName>
    <label>Wednesday PM</label>
    <summarizedField>TimesheetEntry__c.WednesdayPM__c</summarizedField>
    <summaryForeignKey>TimesheetEntry__c.Timesheet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>