force-app/main/default/objects/Timesheet__c/fields/WeekSum__c.field-meta.xml
<CustomField>
    <fullName>WeekSum__c</fullName>
    <formula>MondayAM__c + TuesdayAM__c + WednesdayAM__c + ThursdayAM__c + FridayAM__c + MondayPM__c + TuesdayPM__c + WednesdayPM__c + ThursdayPM__c + FridayPM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Week Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>