force-app/main/default/objects/Timesheet__c/validationRules/VR01_TS_MondayDate.validationRule-meta.xml
<ValidationRule>
    <fullName>VR01_TS_MondayDate</fullName>
    <active>true</active>
    <description>The Monday Date must be a Monday</description>
    <errorConditionFormula>WEEKDAY( MondayDate__c ) &lt;&gt; 2</errorConditionFormula>
    <errorDisplayField>MondayDate__c</errorDisplayField>
    <errorMessage>The date is not a Monday.</errorMessage>
</ValidationRule>