force-app/main/default/objects/Timesheet__c/validationRules/VR02_TS_LockRecord.validationRule-meta.xml
<ValidationRule>
    <fullName>VR02_TS_LockRecord</fullName>
    <active>true</active>
    <description>When the status is accepted (nb TSE accpeted = nb TSE), then the record is locked.</description>
    <errorConditionFormula>ISPICKVAL( Status__c , &quot;Accepted&quot;)  &amp;&amp;(  ISCHANGED( MondayDate__c )  || ISCHANGED(  OwnerId ))</errorConditionFormula>
    <errorMessage>A Timesheet accepted cannot be updated.</errorMessage>
</ValidationRule>